update heal footer

--- a/qa-heal.planx-pla.net/portal/gitops.css
+++ b/qa-heal.planx-pla.net/portal/gitops.css
@@ -144,16 +144,22 @@ body,
   height: 50px;
 }
 
-.footer__version-area {
-  width: 300px;
+ .footer__version-area {
+  display: none;
 }
 
 .footer {
+  background-color: #000;
+}
+
+.footer-container {
   align-items: center;
+  background-color: #000;
 }
 
 .footer__nav {
   align-items: center;
+  background-color: #000;
 }
 
 /* Data Explorer */
