--- a/qa-kidsfirst.planx-pla.net/portal/gitops.css
+++ b/qa-kidsfirst.planx-pla.net/portal/gitops.css
@@ -21,5 +21,5 @@ a:focus {
 /* adjust spacing for added footer links */
 .protected-content,
 .login-page__side-box {
-  min-height: ~"calc(100vh - 264px)";
+  min-height: calc(100vh - 263px);
 }
