--- a/qa-heal.planx-pla.net/portal/gitops.css
+++ b/qa-heal.planx-pla.net/portal/gitops.css
@@ -149,17 +149,17 @@ body,
 }
 
 .footer {
-  background-color: #000;
+  background-color: #818a91;
 }
 
 .footer-container {
   align-items: center;
-  background-color: #000;
+  background-color: #818a91;
 }
 
 .footer__nav {
   align-items: center;
-  background-color: #000;
+  background-color: #818a91;
 }
 
 /* Data Explorer */
