--- a/qa-niaid.planx-pla.net/portal/gitops.css
+++ b/qa-niaid.planx-pla.net/portal/gitops.css
@@ -148,3 +148,52 @@ body,
   margin: 0 0 0 20px;
   padding: 5px 0;
 }
+
+  .pl-8 {
+    padding-left: 2rem;
+  }
+  .border-heal-magenta {
+    border-left: 8px solid rgba(152, 37, 104);
+  }
+  .border-l-8 {
+    border-left-width: 8px;
+  }
+  .ml-1 {
+    margin-left: 0.25rem;
+  }
+  .text-heal-magenta {
+    color: rgb(152, 37, 104);
+    font-weight: 600;
+    font-size: 1rem;
+    line-height: 1.75;
+    font-family: Montserrat, sans-serif;
+  }
+
+  .mr-5 {
+    margin-right: 1.25rem;
+  }
+  .heal-btn {
+    display: inline-block;
+    text-align: center;
+    padding: 0.375rem 1rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    font-weight: 600;
+    text-transform: uppercase;
+    color: #fff;
+    border: 4px solid transparent;
+    border-radius: 7px;
+    background-color: #982568;
+  }
+  .heal-btn a {
+    color: inherit;
+    text-decoration: inherit;
+  }
+
+  .heal-btn-rev,
+  .heal-btn:focus,
+  .heal-btn:hover {
+    background-color: #fff;
+    border-color: #982568;
+    color: #982568;
+  }
