--- a/qa-niaid.planx-pla.net/portal/gitops.css
+++ b/qa-niaid.planx-pla.net/portal/gitops.css
@@ -161,7 +161,7 @@ body,
   .ml-1 {
     margin-left: 0.25rem;
   }
-  .text-heal-magenta {
+  .text-nct-red {
     color: rgb(152, 37, 104);
     font-weight: 600;
     font-size: 1rem;
@@ -172,7 +172,7 @@ body,
   .mr-5 {
     margin-right: 1.25rem;
   }
-  .heal-btn {
+  .nct-btn {
     display: inline-block;
     text-align: center;
     padding: 0.375rem 1rem;
@@ -185,14 +185,14 @@ body,
     border-radius: 7px;
     background-color: #982568;
   }
-  .heal-btn a {
+  .nct-btn a {
     color: inherit;
     text-decoration: inherit;
   }
 
-  .heal-btn-rev,
-  .heal-btn:focus,
-  .heal-btn:hover {
+  .nct-btn-rev,
+  .nct-btn:focus,
+  .nct-btn:hover {
     background-color: #fff;
     border-color: #982568;
     color: #982568;
