--- a/qa-niaid.planx-pla.net/portal/gitops.css
+++ b/qa-niaid.planx-pla.net/portal/gitops.css
@@ -162,7 +162,7 @@ body,
     margin-left: 0.25rem;
   }
   .text-nct-red {
-    color: rgb(152, 37, 104);
+    color: #BC3231;
     font-weight: 600;
     font-size: 1rem;
     line-height: 1.75;
