--- a/qa-niaid.planx-pla.net/portal/gitops.css
+++ b/qa-niaid.planx-pla.net/portal/gitops.css
@@ -185,7 +185,7 @@ body,
     color: #fff;
     border: 4px solid transparent;
     border-radius: 7px;
-    background-color: #982568;
+    background-color: #20558A;
   }
   .nct-btn a {
     color: inherit;
@@ -197,5 +197,5 @@ body,
   .nct-btn:hover {
     background-color: #6ea6dd;
     border-color: #6ea6dd;
-    color: #6ea6dd;
+    color: #fff;
   }
