VADC-1437 VADC-1436: update button colors to have more contrast

--- a/qa-mickey.planx-pla.net/portal/gitops.css
+++ b/qa-mickey.planx-pla.net/portal/gitops.css
@@ -1,3 +1,19 @@
+:root {
+  --g3-color__base-blue: #194C90;
+  --g3-color__base-blue-light: #2466AC;
+
+  --g3-color__highlight-orange-white-text: #994A03;
+  --g3-color__highlight-orange-white-text-light: #B35F05;
+  
+  --g3-primary-btn__bg-color: var(--g3-color__highlight-orange-white-text-light);
+  --g3-primary-btn__bg-color--hover: var(--g3-color__highlight-orange-white-text);
+
+}
+
+.popup__title {
+  background-color: var(--g3-color__base-blue);
+}
+
 .nav-bar__logo {
   padding: 10px 0;
 }
