VADC-1412: styling to change title into h1 heading

--- a/qa-mickey.planx-pla.net/portal/gitops.css
+++ b/qa-mickey.planx-pla.net/portal/gitops.css
@@ -31,7 +31,8 @@
   justify-content: center;
 }
 
-.login-page .login-page__central-content > div {
+.login-page .login-page__central-content > div,
+.login-page .login-page__central-content > h1 {
   flex-basis: 100%;
 }
 
